--- a/android/signin/app/build.gradle
+++ b/android/signin/app/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.google.samples.quickstart.signin"
@@ -26,15 +27,20 @@ android {
     }
 
     // Resolve dependency differences between app and tests
-    configurations.all {
-        resolutionStrategy.force 'com.android.support:support-annotations:23.2.0'
+//    configurations.all {
+//        resolutionStrategy.force 'com.android.support:support-annotations:23.2.0'
+//    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:design:23.2.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
 
     // Dependency for Google Sign-In
     compile 'com.google.android.gms:play-services-auth:8.4.0'
@@ -43,7 +49,7 @@ dependencies {
     androidTestCompile 'com.android.support.test:runner:0.4.1'
     androidTestCompile 'com.android.support.test:rules:0.4.1'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
-    androidTestCompile 'com.android.support:support-annotations:23.2.0'
+    androidTestCompile 'com.android.support:support-annotations:23.3.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
