--- a/android/signin/build.gradle
+++ b/android/signin/build.gradle
@@ -5,9 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-beta6'
+        classpath 'com.android.tools.build:gradle:2.0.0'
         classpath 'com.google.gms:google-services:2.0.0-beta6'
-
+        classpath 'me.tatarka:gradle-retrolambda:3.3.0-beta4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
